re PR c++/11546 (Type lookup problems in out-of-line definition of a class doubly nested from a template class)

PR c++/11546
	* pt.c (lookup_template_class): Treat TYPE_DECLs as TEMPLATE_DECLs
	where appropriate.

	PR c++/11546
	* testsuite/g++.dg/template/lookup1.C: New test.

From-SVN: r69601